--- a/themes/PAFF/templates/node/sponsor/node--sponsor.html.twig
+++ b/themes/PAFF/templates/node/sponsor/node--sponsor.html.twig
@@ -65,7 +65,9 @@
  *   in different view modes.
  */
 #}
+
 {%
+
   set classes = [
     node.bundle|clean_class,
     node.isPromoted() ? 'is-promoted',
@@ -77,26 +79,6 @@
 %}
 <article{{ attributes.addClass(classes) }}>
 
-  {{ title_prefix }}
-  {% if not page %}
-    <h2{{ title_attributes }}>
-      <a href="{{ url }}" rel="bookmark">{{ label }}</a>
-    </h2>
-  {% endif %}
-  {{ title_suffix }}
-
-  {% if display_submitted %}
-    <footer>
-      {{ author_picture }}
-      <div{{ author_attributes.addClass('author') }}>
-        {% trans %}Submitted by {{ author_name }} on {{ date }}{% endtrans %}
-        {{ metadata }}
-      </div>
-    </footer>
-  {% endif %}
-
-  <div{{ content_attributes.addClass('content') }}>
-    {{ content }}
-  </div>
+    <a href="{{ node.field_link.0.url }}"><img src="{{ file_url(node.field_image.entity.uri.value) }}"></a>
 
 </article>
