--- a/themes/PAFF/templates/views/views-view-unformatted--news.html.twig
+++ b/themes/PAFF/templates/views/views-view-unformatted--news.html.twig
@@ -23,7 +23,7 @@
     <h3>{{ title }}</h3>
 {% endif %}
 
-<div class="sponsors-slideshow">
+<div class="news-slider-for">
 {% for row in rows %}
     {%
     set row_classes = [
