--- a/themes/PAFF/templates/views/views-view-unformatted--slider--block-1.html.twig
+++ b/themes/PAFF/templates/views/views-view-unformatted--slider--block-1.html.twig
@@ -22,8 +22,7 @@
 {% if title %}
     <h3>{{ title }}</h3>
 {% endif %}
-
-<div class="sponsors-slideshow">
+<div class="slider-slider-for">
 {% for row in rows %}
     {%
     set row_classes = [
@@ -34,4 +33,5 @@
         {{ row.content }}
     </div>
 {% endfor %}
+
 </div>
