--- a/themes/PAFF/less/regions/content.less
+++ b/themes/PAFF/less/regions/content.less
@@ -4,3 +4,15 @@
     &:extend(.section-title);
   }
 }
+.block-views-blockdownload-block-1{
+
+  margin-bottom: 50px;
+}
+.region-sidebar-second{
+  .block{
+    .well;
+  }
+  .block-title {
+  text-align: center;
+  }
+}
