--- a/themes/PAFF/templates/page.html.twig
+++ b/themes/PAFF/templates/page.html.twig
@@ -56,10 +56,21 @@
  * @see html.html.twig
  */
 #}
-<div >
-    <div>
+<div class="container">
+    <div class="paff-logo">
       <a href="{{ url('view.frontpage.page_1')  }}"><img src="{{ base_path ~ directory }}/logo.png" alt="My Logo"/></a>
     </div>
+    <div class="pull-right">
+      <div class="in-block">
+        <h2>07.-11. September</h2>
+    </div>
+    <div class="in-block">
+      <a href="{{ url('view.frontpage.page_1')  }}"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
+    </div>
+    <div class="in-block">
+      <a href="{{ url('view.frontpage.page_1')  }}"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+    </div>
+    </div><div class="clearfix"></div>
 </div>
 
 {% set container = theme.settings.fluid_container ? 'container-fluid' : 'container' %}
