--- a/themes/PAFF/less/regions/content.less
+++ b/themes/PAFF/less/regions/content.less
@@ -15,4 +15,8 @@
   .block-title {
   text-align: center;
   }
+  .views-field-field-date-and-time {
+    text-align: center;
+    font-size: 20px;
+  }
 }
