--- a/themes/PAFF/less/regions/header.less
+++ b/themes/PAFF/less/regions/header.less
@@ -1,3 +1,16 @@
+.path-frontpage .region-header {
+    background-color: @brand-blocks;
+    margin-bottom: 35px;
+    border-bottom: 3px solid;
+    padding-bottom: 15px;
+    .block-title {
+      .hide;
+    }
+    .slick-margin {
+      margin-left: 25px;
+    }
+ }
+
 .paff-logo{
   .pull-left;
 }
