--- a/themes/PAFF/less/regions/header.less
+++ b/themes/PAFF/less/regions/header.less
@@ -1,18 +1,25 @@
 .path-frontpage .region-header {
-    background-color: @brand-blocks;
-    margin-bottom: 35px;
-    border-bottom: 3px solid;
-    padding-bottom: 15px;
-    .block-title {
-      .hide;
-    }
-    .slick-margin {
-      margin-left: 25px;
-    }
- }
+  background-color: @brand-blocks;
+  margin-bottom: 35px;
+  border-bottom: 3px solid;
+  padding-bottom: 15px;
+  .block-title {
+    .hide;
+  }
+  .slick-margin {
+    margin-left: 25px;
+  }
+}
 
 .paff-logo{
   .pull-left;
+  display: block;
+  width: 100%;
+  max-width: 340px;
+  img{
+    max-width: 100%;
+    height: auto;
+  }
 }
 .input-group-btn{
   .hide
@@ -23,7 +30,6 @@
   h2{
     color:#0d0d0d;
   }
-
 }
 
 
@@ -45,16 +51,16 @@
         padding-left: 15px;
       }
       + li{
-         margin-left:10px;
-       }
+        margin-left:10px;
+      }
     }
     .block-search {
       float:right;
       margin-top: 8px;
       width:320px;
-       .input-group{
-         width:320px;
-       }
+      .input-group{
+        width:320px;
+      }
       .form-item{
         margin-bottom: 0;
       }
