--- a/themes/PAFF/less/regions/header.less
+++ b/themes/PAFF/less/regions/header.less
@@ -12,6 +12,7 @@
 }
 
 .paff-logo{
+  margin-top:20px;
   .pull-left;
   display: block;
   width: 100%;
@@ -27,11 +28,24 @@
 .in-block{
   display:inline-block;
   margin-left: 10px;
-  h2{
-    color:#0d0d0d;
+  i{
+    color:#969696;
+    font-size:28px;
   }
 }
-
+.date:after{
+  content:"";
+  display:inline-block;
+  vertical-align: middle;
+  height:100px;
+  width:1px;
+  border-right: 1px solid #969696;
+  padding-right: 20px;
+}
+.date{
+  color:black;
+  font-size:36px;
+}
 
 
 
