--- a/themes/PAFF/templates/page.html.twig
+++ b/themes/PAFF/templates/page.html.twig
@@ -62,7 +62,7 @@
     </div>
     <div class="pull-right">
       <div class="in-block">
-        <h2>07.-11. September</h2>
+        <h2 class="date">07.-11. September, 2016.</h2>
     </div>
     <div class="in-block">
       <a href="{{ url('view.frontpage.page_1')  }}"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
