--- a/themes/Bootstrap/templates/field/field--node--field-image--article.html.twig
+++ b/themes/Bootstrap/templates/field/field--node--field-image--article.html.twig
@@ -43,8 +43,7 @@
     'field',
     'field--name-' ~ field_name|clean_class,
     'field--type-' ~ field_type|clean_class,
-    'field--label-' ~ label_display,
-    'col-sm-4',
+    'field--label-' ~ label_display
   ]
 %}
 {%
