--- a/themes/PAFF/less/regions/header.less
+++ b/themes/PAFF/less/regions/header.less
@@ -1,6 +1,11 @@
+.transparency {
+  background: rgba(255, 255, 255, 0.8);
+}
+
 .path-frontpage .region-header {
-  background-color: @brand-blocks;
-  margin-bottom: 35px;
+  .slick-track {
+    padding-top: 60px;
+  }
   border-bottom: 3px solid;
   padding-bottom: 15px;
   .block-title {
@@ -9,6 +14,15 @@
   .slick-margin {
     margin-left: 25px;
   }
+}
+.path-frontpage .background-img {
+  background-image: url('hero-transparent.jpg');
+  background-size: cover;
+
+}
+
+.path-frontpage .main-container {
+  margin-top: 35px;
 }
 
 .paff-logo{
@@ -51,10 +65,14 @@
 
 
 .navbar{
+  .container {
+    margin-top:10px;
+  }
+  height: 70px;
   background-color: @brand-primary;
   font-weight: @headings-font-weight;
   color: @text-color;
-  font-size:24px;
+  font-size:28px;
 
   .navbar-header{
     width:100%;
