--- a/themes/PAFF/css/style.css
+++ b/themes/PAFF/css/style.css
@@ -1,3 +1,4 @@
+@topcina :margin-top:5px;
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 html {
   font-family: sans-serif;
@@ -6029,6 +6030,9 @@ button.close {
 .region-sidebar-second .views-field-field-date-and-time {
   text-align: center;
   font-size: 20px;
+}
+.news-margin {
+  margin: 15px;
 }
 .view-sponsors {
   text-align: center;
