--- a/themes/PAFF/templates/node/film/node--film.html.twig
+++ b/themes/PAFF/templates/node/film/node--film.html.twig
@@ -94,9 +94,51 @@
       </div>
     </footer>
   {% endif %}
-
-  <div{{ content_attributes.addClass('content') }}>
-    {{ content }}
+  <div class="row">
+<div class="row">
+  <div class="col-md-6">
+    {{content.field_image}}
   </div>
+  <div class="col-md-3">
+    {{content.field_title_original}}
+      </div>
+      <div class="col-md-3">
+    {{content.field_date_and_time}}
+    </div>
+    <div class="row">
+      <div class="col-md-6 pull-right">
+      {{content.body}}
+      </div>
+  </div>
+  </div>
+  </div>
+
+
+<div class="row">
+<div class="col-md-4">
+{{content.field_director}}
+{{content.field_producer}}
+{{content.field_editing}}
+{{content.field_music}}
+{{content.field_sound}}
+{{content.field_cast}}
+</div>
+<div class="col-md-4">
+{{content.field_screenplay}}
+{{content.field_shooting}}
+{{content.field_country}}
+{{content.field_production}}
+{{content.field_festivals}}
+{{content.field_set_design}}
+
+</div>
+<div class="col-md-4">
+{{content.field_duration}}
+{{content.field_content_reference}}
+{{content.field_screening}}
+{{content.field_year}}
+{{content.field_contact}}
+</div>
+</div>
 
 </article>
