--- a/themes/PAFF/templates/node/news/node--article.html.twig
+++ b/themes/PAFF/templates/node/news/node--article.html.twig
@@ -77,13 +77,13 @@
 %}
 <article{{ attributes.addClass(classes) }}>
 
-  {{ title_prefix }}
-  {% if not page %}
-    <h2{{ title_attributes }}>
-      <a href="{{ url }}" rel="bookmark">{{ label }}</a>
-    </h2>
-  {% endif %}
-  {{ title_suffix }}
+{{ title_prefix }}
+{% if not page %}
+  <h2{{ title_attributes }}>
+    <a href="{{ url }}" rel="bookmark">{{ label }}</a>
+  </h2>
+{% endif %}
+{{ title_suffix }}
 
   {% if display_submitted %}
     <footer>
@@ -96,7 +96,16 @@
   {% endif %}
 
   <div {{ content_attributes.addClass('content, row') }}>
-    {{ content }}
+      <div>
+          <div class="col-md-6">
+
+           {{ content.field_image }}
+         </div>
+
+           <div class="col-md-6">
+            {{ content.body }}
+          </div>
+        </div>
   </div>
 
 </article>
