--- a/themes/PAFF/less/regions/header.less
+++ b/themes/PAFF/less/regions/header.less
@@ -16,7 +16,7 @@
   }
 }
 .path-frontpage .background-img {
-  background-image: url('hero-transparent.jpg');
+  background-image: url('../images/hero-transparent.jpg');
   background-size: cover;
 
 }
