--- a/themes/PAFF/css/style.css
+++ b/themes/PAFF/css/style.css
@@ -5933,7 +5933,7 @@ button.close {
 .path-frontpage .region-header .slick-margin {
   margin-left: 25px;
 }
-.path-frontpage .background-img {
+.background-img {
   background-image: url('../images/hero-transparent.jpg');
   background-size: cover;
 }
@@ -5976,7 +5976,7 @@ button.close {
   font-size: 36px;
 }
 .navbar {
-  height: 70px;
+  min-height: 70px;
   background-color: #003727;
   font-weight: 900;
   color: #333333;
