--- a/themes/PAFF/less/regions/header.less
+++ b/themes/PAFF/less/regions/header.less
@@ -15,12 +15,12 @@
     margin-left: 25px;
   }
 }
-.path-frontpage .background-img {
+
+.background-img {
   background-image: url('../images/hero-transparent.jpg');
   background-size: cover;
 
 }
-
 .path-frontpage .main-container {
   margin-top: 35px;
 }
@@ -68,7 +68,7 @@
   .container {
     margin-top:10px;
   }
-  height: 70px;
+  min-height: 70px;
   background-color: @brand-primary;
   font-weight: @headings-font-weight;
   color: @text-color;
