--- a/themes/PAFF/less/regions/content.less
+++ b/themes/PAFF/less/regions/content.less
@@ -53,3 +53,16 @@ margin-top:15px;
       }
   }
 }
+.block-views-blockfilm-event-location-block-1 {
+  margin-top:110px;
+}
+
+.block-views-blockdocuments-block-1 {
+   margin-top: 60px;
+   background-color: white;
+   color: @brand-blocks;
+ }
+
+.down-margin {
+  margin-right: 15px;
+}
