--- a/themes/PAFF/templates/views/views-view-unformatted--slider--block-1.html.twig
+++ b/themes/PAFF/templates/views/views-view-unformatted--slider--block-1.html.twig
@@ -18,10 +18,10 @@
  */
 #}
 
-
 {% if title %}
     <h3>{{ title }}</h3>
 {% endif %}
+<!-- Added class for slick library -->
 <div class="slider-slider-for">
 {% for row in rows %}
     {%
