--- a/themes/PAFF/less/bootstrap/wells.less
+++ b/themes/PAFF/less/bootstrap/wells.less
@@ -10,12 +10,14 @@
   margin-bottom: 20px;
   background-color: @well-bg;
   color: white;
+  text-align: center;
   h2,
   a{
     color: white;
   }
   h2{
     margin-top: 0;
+
   }
 }
 
