--- a/themes/PAFF/templates/node/person/node--person.html.twig
+++ b/themes/PAFF/templates/node/person/node--person.html.twig
@@ -97,7 +97,7 @@
 
   <div{{ content_attributes.addClass('content') }}>
      <div class="row">
-         <div class="pull-left news-margin">
+         <div class="pull-left down-margin">
             {{content.field_image}}
         </div>
         <div>
