--- a/themes/PAFF/less/style.less
+++ b/themes/PAFF/less/style.less
@@ -20,3 +20,9 @@
 @import 'pages/schedule';
 // Base-theme overrides.
 @import 'overrides';
+
+@import 'node/person';
+
+@import 'node/documentation';
+
+@import 'node/location';
