--- a/themes/PAFF/templates/page.html.twig
+++ b/themes/PAFF/templates/page.html.twig
@@ -67,10 +67,10 @@
         <div class="in-block">
           <h2 class="date">07.-11. September, 2016.</h2>
         </div>
-        <div class="in-block">
+        <div class="in-block hover-black">
           <a href="{{ url('view.frontpage.page_1')  }}"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a>
         </div>
-        <div class="in-block">
+        <div class="in-block hover-black">
           <a href="{{ url('view.frontpage.page_1')  }}"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
         </div>
       </div><div class="clearfix"></div>
@@ -129,7 +129,7 @@
 {% block main %}
 
 </div>
-  <div role="main" class="main-container {{ container }} js-quickedit-main-content">
+  <div role="main" class="main-container site-wide-margin {{ container }} js-quickedit-main-content">
 
 
 
