--- a/themes/PAFF/less/regions/content.less
+++ b/themes/PAFF/less/regions/content.less
@@ -1,6 +1,6 @@
 .site-wide-margin{
   margin-top: 40px;
-  
+
 }
 
 .region-footer,
@@ -70,4 +70,8 @@ margin-top:15px;
 
 .down-margin {
   margin-right: 15px;
+}
+.film-margin{
+  margin-top:20px;
+  margin-bottom: 10px;
 }
