--- a/themes/PAFF/less/regions/header.less
+++ b/themes/PAFF/less/regions/header.less
@@ -12,7 +12,8 @@
     .hide;
   }
   .slick-margin {
-    margin-left: 25px;
+    margin-left: 5px;
+    margin-right: 15px;
   }
 }
 
@@ -110,14 +111,15 @@
   position:relative;
   .fa-angle-left {
     position: absolute;
-    top: 60%;
+    top: 63%;
     transform: translateY(-50%);
     z-index: 1;
-    right:97%;
+    right:100%;
+
   }
   .fa-angle-right {
     position: absolute;
-    top: 60%;
+    top: 63%;
     transform: translateY(-50%);
     left: 100%;
   }
