--- a/themes/PAFF/templates/node/film/node--film.html.twig
+++ b/themes/PAFF/templates/node/film/node--film.html.twig
@@ -77,13 +77,7 @@
 %}
 <article{{ attributes.addClass(classes) }}>
 
-  {{ title_prefix }}
-  {% if not page %}
-    <h2{{ title_attributes }}>
-      <a href="{{ url }}" rel="bookmark">{{ label }}</a>
-    </h2>
-  {% endif %}
-  {{ title_suffix }}
+
 
   {% if display_submitted %}
     <footer>
@@ -94,51 +88,66 @@
       </div>
     </footer>
   {% endif %}
-  <div class="row">
-<div class="row">
+  <div class="row film-margin">
   <div class="col-md-6">
+    <div class="row">
+    <div class="row">
     {{content.field_image}}
   </div>
+  <div class="row">
   <div class="col-md-3">
-    {{content.field_title_original}}
-      </div>
-      <div class="col-md-3">
-    {{content.field_date_and_time}}
-    </div>
+  {{content.field_director}}
+  {{content.field_producer}}
+  {{content.field_editing}}
+  {{content.field_music}}
+  {{content.field_sound}}
+  {{content.field_cast}}
+  </div>
+  <div class="col-md-3">
+  {{content.field_screenplay}}
+  {{content.field_shooting}}
+  {{content.field_country}}
+  {{content.field_production}}
+  {{content.field_festivals}}
+  {{content.field_set_design}}
+
+  </div>
+  <div class="col-md-3">
+  {{content.field_duration}}
+  {{content.field_content_reference}}
+  {{content.field_screening}}
+  {{content.field_year}}
+  {{content.field_contact}}
+  </div>
+  </div>
+  </div>
+
+
+  </div>
+  <div class="col-md-6">
     <div class="row">
-      <div class="col-md-6 pull-right">
-      {{content.body}}
+      <div class="row">
+        <div class="row">
+            <h2 {{ title_attributes }}>
+              {{ label }}
+            </h2>
+        </div>
+
+        <div class="row">
+          <div class="col-md-3">
+            {{content.field_title_original}}
+          </div>
+          <div class="col-md-3">
+            {{content.field_date_and_time}}
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        {{content.body}}
       </div>
   </div>
   </div>
-  </div>
 
 
-<div class="row">
-<div class="col-md-4">
-{{content.field_director}}
-{{content.field_producer}}
-{{content.field_editing}}
-{{content.field_music}}
-{{content.field_sound}}
-{{content.field_cast}}
-</div>
-<div class="col-md-4">
-{{content.field_screenplay}}
-{{content.field_shooting}}
-{{content.field_country}}
-{{content.field_production}}
-{{content.field_festivals}}
-{{content.field_set_design}}
-
-</div>
-<div class="col-md-4">
-{{content.field_duration}}
-{{content.field_content_reference}}
-{{content.field_screening}}
-{{content.field_year}}
-{{content.field_contact}}
-</div>
-</div>
 
 </article>
