--- a/themes/PAFF/less/bootstrap/variables.less
+++ b/themes/PAFF/less/bootstrap/variables.less
@@ -20,7 +20,13 @@
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
 @brand-danger:          #d9534f;
-
+@brand-bg:              #aabcb3;
+@brand-border:          #f4b2b4;
+@brand-nesto:           #3b856b;
+@brand-news:            #6d69a8;
+@brand-event:           #04b6d6;
+@brand-location:        #ee9725;
+@brand-film:            #42bf9b;
 
 //== Scaffolding
 //
