--- a/themes/PAFF/less/bootstrap/wells.less
+++ b/themes/PAFF/less/bootstrap/wells.less
@@ -30,3 +30,15 @@
   padding: 9px;
   border-radius: @border-radius-small;
 }
+.well-vesti{
+  
+}
+.well-film{
+
+}
+.well-location{
+
+}
+.well-event{
+
+}
