--- a/themes/PAFF/css/style.css
+++ b/themes/PAFF/css/style.css
@@ -5994,6 +5994,9 @@ button.close {
   .navbar .navbar-nav {
     width: 100%;
   }
+  .navbar .navbar-nav li {
+    text-transform: uppercase;
+  }
   .navbar .navbar-nav li:first-child a {
     padding-left: 15px;
     margin-right: 55px;
