--- a/themes/PAFF/less/regions/header.less
+++ b/themes/PAFF/less/regions/header.less
@@ -83,6 +83,7 @@
       width:100%;
     }
     .navbar-nav li{
+      text-transform: uppercase;
       &:first-child a{
         padding-left: 15px;
         margin-right: 55px;
