Fixed Film node

--- a/themes/PAFF/templates/node/event/node--event.html.twig
+++ b/themes/PAFF/templates/node/event/node--event.html.twig
@@ -96,7 +96,7 @@
   {% endif %}
 
   <div{{ content_attributes.addClass('content') }}>
-      <div class="row">
+      <div>
            <div class="row">
                <div class="col-md-8">
                   {{content.field_image}}
