Content types templates fix

--- a/themes/PAFF/css/style.css
+++ b/themes/PAFF/css/style.css
@@ -6042,6 +6042,9 @@ button.close {
 .footer.background-img {
   background-position: top center;
 }
+.mini-teaser-title {
+  font-size: 26px;
+}
 .site-wide-margin {
   margin-top: 40px;
 }
