--- a/themes/PAFF/templates/node/film/node--film--mini-teaser.html.twig
+++ b/themes/PAFF/templates/node/film/node--film--mini-teaser.html.twig
@@ -79,7 +79,7 @@
 
   {{ title_prefix }}
   {% if not page %}
-    <h2{{ title_attributes }}>
+    <h2 class="mini-teaser-title"{{ title_attributes }}>
       <a href="{{ url }}" rel="bookmark">{{ label }}</a>
     </h2>
   {% endif %}
