--- a/themes/PAFF/templates/node/person/node--person.html.twig
+++ b/themes/PAFF/templates/node/person/node--person.html.twig
@@ -101,6 +101,9 @@
             {{content.field_image}}
         </div>
         <div>
+          <h2{{ title_attributes }}>
+          {{ label }}
+        </h2>
                {{content.field_long_text}}
          </div>
      </div>
