--- a/themes/PAFF/less/bootstrap/wells.less
+++ b/themes/PAFF/less/bootstrap/wells.less
@@ -30,8 +30,14 @@
   padding: 9px;
   border-radius: @border-radius-small;
 }
-.well-vesti{
-  
+.path-frontpage .well-vesti{
+
+    background-image:url("../images/news_pozadina.jpg");
+    background-size: cover;
+    padding-bottom: 50px;
+    a{
+      color:@brand-news;
+    }
 }
 .well-film{
 
