--- a/themes/PAFF/less/regions/header.less
+++ b/themes/PAFF/less/regions/header.less
@@ -77,6 +77,7 @@
 
   .navbar-header{
     width:100%;
+        text-transform: uppercase;
   }
   @media (min-width: @screen-md){
     .navbar-nav {
@@ -86,21 +87,10 @@
       text-transform: uppercase;
       &:first-child a{
         padding-left: 15px;
-        margin-right: 55px;
+        margin-right: 45px;
       }
       + li{
-        margin: 0 55px;
-      }
-    }
-    .block-search {
-      float:right;
-      margin-top: 8px;
-      width:320px;
-      .input-group{
-        width:320px;
-      }
-      .form-item{
-        margin-bottom: 0;
+        margin: 0 45px;
       }
     }
   }
