--- a/themes/PAFF/less/regions/content.less
+++ b/themes/PAFF/less/regions/content.less
@@ -62,14 +62,12 @@ margin-top:15px;
       }
   }
 }
-.block-views-blockfilm-event-location-block-1 {
-  margin-top:110px;
-}
 
 .block-views-blockdocuments-block-1 {
    margin-top: 60px;
-   background-color: white;
-   color: @brand-blocks;
+   i {
+     color: white;
+   }
  }
 
 .down-margin {
@@ -79,4 +77,3 @@ margin-top:15px;
   margin-top:20px;
   margin-bottom: 10px;
 }
-.field--name-field-image {margin-left: -15px;}
