--- a/themes/PAFF/less/bootstrap/wells.less
+++ b/themes/PAFF/less/bootstrap/wells.less
@@ -30,7 +30,9 @@
   padding: 9px;
   border-radius: @border-radius-small;
 }
-.path-frontpage .region-content .well-vesti{
+.path-frontpage .region-content {
+
+    .well-vesti{
 
     background-image:url("../images/news_pozadina.jpg");
     background-size: cover;
@@ -41,11 +43,16 @@
         color:@brand-primary;
       }
     }
+  }
+
 
 }
-.well-film{
-
+.well-film {
+    a  {
+      color: @brand-blocks;
+    }
 }
+
 .well-location{
 
 }
