--- a/themes/PAFF/less/regions/header.less
+++ b/themes/PAFF/less/regions/header.less
@@ -44,7 +44,7 @@
   display:inline-block;
   margin-left: 10px;
   i{
-    color:#969696;
+    color: @brand-blocks;
     font-size:28px;
   }
 }
@@ -62,9 +62,6 @@
   font-size:36px;
 }
 
-
-
-
 .navbar{
   .container {
     margin-top:10px;
@@ -77,7 +74,37 @@
 
   .navbar-header{
     width:100%;
-        text-transform: uppercase;
+    text-transform: uppercase;
+    nav {
+      display:inline-block;
+    }
+    .block-language {
+      display: inline-block;
+      a {
+        color: white;
+        &:hover {
+          color: @brand-blocks;
+        }
+      }
+      .language-switcher-language-url {
+        li  + li  {
+          &:before {
+            content: "";
+            display: inline-block;
+            vertical-align: middle;
+            border-left: 1px solid white;
+            padding-left: 5px;
+            height: 28px;
+            width: 1px;
+            margin-left: 5px;
+          }
+        }
+        padding-left: 0;
+        margin-bottom: 10;
+        font-size: 18px;
+        text-align: center;
+      }
+    }
   }
   @media (min-width: @screen-md){
     .navbar-nav {
@@ -94,9 +121,17 @@
       }
     }
   }
+  .language-switcher-language-url {
+    list-style-type: none;
+    .pull-right;
+    .clearfix;
+    li {
+      .pull-left;
+    }
+  }
 }
-.hover-black i:hover{
-  color:black;
+.social i:hover{
+  color: @brand-primary;
 }
 .path-frontpage .views-element-container{
   position:relative;
