--- a/themes/PAFF/templates/node/film/node--film--slider.html.twig
+++ b/themes/PAFF/templates/node/film/node--film--slider.html.twig
@@ -93,7 +93,7 @@
   <div class="col-md-6">
     {{content.field_image}}
   </div>
-  <div class="col-md-6">
+  <div class="col-md-6 well-film"">
     {{ title_prefix }}
     {% if not page %}
       <h2{{ title_attributes }} >
