--- a/themes/PAFF/templates/node/news/node--article--slider.html.twig
+++ b/themes/PAFF/templates/node/news/node--article--slider.html.twig
@@ -90,6 +90,7 @@
   {% endif %}
 
   <div{{ content_attributes.addClass('content') }}>
+  <div class="row">
   <div class="col-md-6">
     {{content.field_image}}
   </div>
@@ -103,6 +104,7 @@
       {{ title_suffix }}
       {{content.body}}
     </div>
+  </div>
   </div>
 
 </article>
