--- a/themes/PAFF/templates/node/news/node--article--teaser.html.twig
+++ b/themes/PAFF/templates/node/news/node--article--teaser.html.twig
@@ -91,7 +91,7 @@
       <div class="col-md-2">
           {{content.field_image}}
       </div>
-      <div class="col-md-10">
+      <div class="col-md-10 well-vesti">
           {{content.body}}
       </div>
   </div>
